php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #20087 mb_parse_string crashes with non-encoded data
Submitted: 2002-10-25 10:25 UTC Modified: 2002-10-25 12:44 UTC
From: grangeway at hotmail dot com Assigned:
Status: Closed Package: mbstring related
PHP Version: 4CVS-2002-10-25 OS: w2k
Private report: No CVE-ID: None
 [2002-10-25 10:25 UTC] grangeway at hotmail dot com
assertion failed: strval != NULL, file c:\php\src420\php4\main\php_variables.c line 45

Test code:

<? echo mb_parse_str("testmoo"); ?> --> crash
<? echo mb_parse_str("test=moo"); ?> --> works fine

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-10-25 10:51 UTC] moriyoshi@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php4-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php4-win32-latest.zip

Reclassified...
Anyway I can't reproduce this yet. What version of PHP do you really use?

 [2002-10-25 12:09 UTC] derick@php.net
I can reproduce this on Windows with some CVS version (of a few weeks ago). But it does not really crash, it gives the following assertion error:

Assertion failed: strval != NULL, d:\php4\main\php_variables.c, line 42
 [2002-10-25 12:44 UTC] derick@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 19:00:01 2026 UTC