- Fixed bug #20087 (Assertion failure when the value was empty)