ext/mbstring/mbstring.c
@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: mbstring.c,v 1.123 2002/10/25 09:36:36 moriyoshi Exp $ */
+/* $Id: mbstring.c,v 1.124 2002/10/25 17:44:52 derick Exp $ */
 
 /*
  * PHP4 Multibyte String module "mbstring" (currently only for Japanese)
@@ -1794,7 +1794,7 @@ PHP_FUNCTION(mb_parse_str)
 		}
 		n++;
 		/* add variable to symbol table */
-		php_register_variable_safe(var, val, val_len, track_vars_array TSRMLS_CC);
+		php_register_variable_safe(var, val ? val : "", val_len, track_vars_array TSRMLS_CC);
 		mbfl_string_clear(&resvar);
 		mbfl_string_clear(&resval);
 	}
